# ArguGen-AI

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  style.css
database/db_operations/: create_tables.py
database/postgres_data/: postmaster.pid
database/postgres_data/base/1/: 2619  2696  2840  2841  pg_internal.init
database/postgres_data/base/16384/: 1247  1249  1259  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455
database/postgres_data/base/5/: pg_internal.init
database/postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
llms/: config.py  llm_config.py  llm_engine.py  prompts.py  voice_engine.py
