[project]
name = "argugen-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "syed-shahzil",email = "syedshahzil.n1214@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.29.0,<3.0.0)",
    "gradio (>=6.9.0,<7.0.0)",
    "openrouter (>=0.7.11,<0.8.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
